--- a/index.html
+++ b/index.html
@@ -48,18 +48,29 @@
 <body class="bg-gray-900 text-white font-serif">
 
 <!-- Navbar -->
-<nav class="bg-black py-4 px-6 flex justify-between items-center fixed top-0 w-full z-50 luxury-shadow">
-  <div class="flex items-center space-x-4">
+<nav class="bg-black py-4 px-6 fixed top-0 w-full z-50 luxury-shadow">
+  <div class="flex justify-between items-center">
     <a href="index.html" class="flex items-center space-x-2">
-      <img src="src/images/glmr-logo.png" alt="GLMR Logo" class="w-16 h-16 object-contain">
-      <h1 class="text-2xl md:text-3xl font-bold text-gold whitespace-nowrap">Global Light Masters Resources</h1>
+      <img src="src/images/glmr-logo.png" alt="GLMR Logo" class="w-12 h-12 object-contain">
+      <h1 class="text-xl md:text-2xl font-bold text-gold whitespace-nowrap">Global Light Masters Resources</h1>
     </a>
+    <div class="md:hidden">
+      <button id="navToggle" class="text-gold text-3xl">☰</button>
+    </div>
+    <div id="navMenu" class="hidden md:flex space-x-6 text-lg font-medium">
+      <a href="index.html" class="text-gold">Home</a>
+      <a href="about.html" class="hover:text-gold">About</a>
+      <a href="contact.html" class="hover:text-gold">Contact</a>
+      <a href="gallery.html" class="hover:text-gold">Gallery</a>
+    </div>
   </div>
-  <div class="space-x-6 text-lg font-medium">
-    <a href="index.html" class="text-gold">Home</a>
-    <a href="about.html" class="hover:text-gold">About</a>
-    <a href="contact.html" class="hover:text-gold">Contact</a>
-    <a href="gallery.html" class="hover:text-gold">Gallery</a>
+
+  <!-- Mobile Menu -->
+  <div id="mobileMenu" class="md:hidden hidden mt-4 space-y-2">
+    <a href="index.html" class="block text-gold">Home</a>
+    <a href="about.html" class="block hover:text-gold">About</a>
+    <a href="contact.html" class="block hover:text-gold">Contact</a>
+    <a href="gallery.html" class="block hover:text-gold">Gallery</a>
   </div>
 </nav>
 
@@ -221,10 +232,10 @@
 <!-- WhatsApp Floating Button -->
 <a
   href="https://wa.me/2349168033670"
-  class="fixed bottom-6 right-6 z-50 bg-green-500 hover:bg-green-600 text-white px-4 py-3 rounded-full shadow-lg flex items-center gap-2 transition"
+  class="fixed bottom-4 right-4 sm:bottom-6 sm:right-6 z-50 bg-green-500 hover:bg-green-600 text-white px-4 py-2 sm:px-4 sm:py-3 rounded-full shadow-lg flex items-center gap-2 transition text-sm sm:text-base"
   target="_blank"
   aria-label="Chat on WhatsApp"
 >
-  <img src="src/images/icon-whatsapp.png" alt="WhatsApp" class="w-6 h-6" />
-  Chat with us
+  <img src="src/images/icon-whatsapp.png" alt="WhatsApp" class="w-5 h-5 sm:w-6 sm:h-6" />
+  <span class="hidden sm:inline">Chat with us</span>
 </a>
