--- a/index.html
+++ b/index.html
@@ -232,10 +232,10 @@
 <!-- WhatsApp Floating Button -->
 <a
   href="https://wa.me/2349168033670"
-  class="fixed bottom-4 right-4 sm:bottom-6 sm:right-6 z-50 bg-green-500 hover:bg-green-600 text-white px-4 py-2 sm:px-4 sm:py-3 rounded-full shadow-lg flex items-center gap-2 transition text-sm sm:text-base"
+  class="fixed bottom-6 right-6 z-50 bg-green-500 hover:bg-green-600 text-white px-4 py-3 rounded-full shadow-lg flex items-center gap-2 transition"
   target="_blank"
   aria-label="Chat on WhatsApp"
 >
-  <img src="src/images/icon-whatsapp.png" alt="WhatsApp" class="w-5 h-5 sm:w-6 sm:h-6" />
-  <span class="hidden sm:inline">Chat with us</span>
+  <img src="src/images/icon-whatsapp.png" alt="WhatsApp" class="w-6 h-6" />
+  Chat with us
 </a>
