--- a/gallery.html
+++ b/gallery.html
@@ -38,20 +38,31 @@
 <body class="bg-gray-900 text-white font-serif">
 
   <!-- Navbar -->
-  <nav class="bg-black py-4 px-6 flex justify-between items-center fixed top-0 w-full z-50 luxury-shadow">
-    <div class="flex items-center space-x-4">
-      <a href="index.html" class="flex items-center space-x-2">
-        <img src="src/images/glmr-logo.png" alt="GLMR Logo" class="w-16 h-16 object-contain">
-        <h1 class="text-2xl md:text-3xl font-bold text-gold whitespace-nowrap">Global Light Masters Resources</h1>
-      </a>
+<nav class="bg-black py-4 px-6 fixed top-0 w-full z-50 luxury-shadow">
+  <div class="flex justify-between items-center">
+    <a href="index.html" class="flex items-center space-x-2">
+      <img src="src/images/glmr-logo.png" alt="GLMR Logo" class="w-12 h-12 object-contain">
+      <h1 class="text-xl md:text-2xl font-bold text-gold whitespace-nowrap">Global Light Masters Resources</h1>
+    </a>
+    <div class="md:hidden">
+      <button id="navToggle" class="text-gold text-3xl">☰</button>
     </div>
-    <div class="space-x-6 text-lg font-medium">
+    <div id="navMenu" class="hidden md:flex space-x-6 text-lg font-medium">
       <a href="index.html" class="text-gold">Home</a>
       <a href="about.html" class="hover:text-gold">About</a>
       <a href="contact.html" class="hover:text-gold">Contact</a>
       <a href="gallery.html" class="hover:text-gold">Gallery</a>
     </div>
-  </nav>
+  </div>
+
+  <!-- Mobile Menu -->
+  <div id="mobileMenu" class="md:hidden hidden mt-4 space-y-2">
+    <a href="index.html" class="block text-gold">Home</a>
+    <a href="about.html" class="block hover:text-gold">About</a>
+    <a href="contact.html" class="block hover:text-gold">Contact</a>
+    <a href="gallery.html" class="block hover:text-gold">Gallery</a>
+  </div>
+</nav>
 
   <!-- Hero Section for Gallery -->
   <section class="relative h-[50vh] flex items-center justify-center overflow-hidden mt-24">
