--- a/about.html
+++ b/about.html
@@ -62,7 +62,8 @@
 </nav>
 
 <!-- About Header -->
-<section class="relative h-[55vh] flex items-center justify-center pt-24 overflow-hidden animate-fade-up">
+<section class="relative h-screen flex items-center justify-center pt-24 pb-24 animate-fade-up">
+
   <img src="src/images/about-bg.jpg" alt="About Background" class="absolute inset-0 w-full h-full object-cover opacity-10 z-0" />
   <h2 class="text-5xl md:text-6xl font-bold gradient-gold drop-shadow-lg z-10 text-center">About Us</h2>
 </section>
