--- a/gallery.html
+++ b/gallery.html
@@ -54,7 +54,8 @@
   </nav>
 
   <!-- Hero Section for Gallery -->
-  <section class="relative h-[50vh] flex items-center justify-center overflow-hidden mt-24">
+  <section class="relative h-screen flex items-center justify-center pt-24 pb-24 animate-fade-up">
+
     <img src="src/images/contact-hero.jpg" alt="Gallery Background" class="absolute inset-0 w-full h-full object-cover opacity-10 z-0" />
     <h2 class="text-5xl md:text-6xl font-bold gradient-gold drop-shadow-lg z-10 text-center">Gallery</h2>
   </section>
