--- a/contact.html
+++ b/contact.html
@@ -70,8 +70,8 @@
 
 
   <!-- Hero Section -->
-  <section class="relative h-[55vh] flex items-center justify-center pt-24 overflow-hidden animate-fadeIn">
-    <img src="src/images/contact-hero.jpg" alt="Contact Background" class="absolute inset-0 w-full h-full object-cover opacity-10 z-0" />
+  <section class="relative h-screen flex items-center justify-center pt-24 pb-24 animate-fade-up">
+<img src="src/images/contact-hero.jpg" alt="Contact Background" class="absolute inset-0 w-full h-full object-cover opacity-10 z-0" />
     <h2 class="text-5xl md:text-6xl font-bold gradient-gold drop-shadow-lg z-10 text-center">Contact Us</h2>
   </section>
 
