--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
 </nav>
 
 <!-- Hero Section -->
-<section class="relative h-screen flex items-center justify-center pt-24 animate-fade-up">
+<section class="relative h-screen flex items-center justify-center pt-24 pb-24 animate-fade-up">
+
   <img src="src/images/hero.jpg" alt="Luxury Lighting" class="absolute inset-0 object-cover w-full h-full opacity-40" />
   <div class="absolute inset-0 bg-gradient-to-b from-black/80 via-black/60 to-black/80"></div>
 
