--- a/public/about.html
+++ b/public/about.html
@@ -48,18 +48,15 @@
 <!-- Navbar -->
 <nav class="bg-black py-4 px-6 fixed top-0 w-full z-[100] luxury-shadow">
   <div class="flex justify-between items-center">
-    <!-- Logo and Brand Name -->
     <a href="index.html" class="flex items-center space-x-2">
-      <img src="src/images/glmr-logo.png" alt="GLMR Logo" class="w-12 h-12 object-contain">
+      <img src="images/glmr-logo.png" alt="GLMR Logo" class="w-12 h-12 object-contain">
       <h1 class="text-base sm:text-lg md:text-2xl font-bold text-gold whitespace-nowrap">Global Light Masters Resources</h1>
     </a>
 
-    <!-- Hamburger Menu Icon -->
     <button id="navToggle" class="md:hidden text-gold text-3xl focus:outline-none">
       ☰
     </button>
 
-    <!-- Desktop Nav -->
     <div id="navMenu" class="hidden md:flex space-x-6 text-lg font-medium">
       <a href="index.html" class="text-gold">Home</a>
       <a href="about.html" class="hover:text-gold">About</a>
@@ -68,7 +65,6 @@
     </div>
   </div>
 
-  <!-- Mobile Nav -->
   <div id="mobileMenu" class="md:hidden hidden mt-4 space-y-2">
     <a href="index.html" class="block text-gold">Home</a>
     <a href="about.html" class="block hover:text-gold">About</a>
@@ -79,8 +75,7 @@
 
 <!-- About Header -->
 <section class="relative h-screen flex items-center justify-center pt-24 pb-24 animate-fade-up">
-
-  <img src="src/images/about-bg.jpg" alt="About Background" class="absolute inset-0 w-full h-full object-cover opacity-10 z-0" />
+  <img src="images/about-bg.jpg" alt="About Background" class="absolute inset-0 w-full h-full object-cover opacity-10 z-0" />
   <h2 class="text-5xl md:text-6xl font-bold gradient-gold drop-shadow-lg z-10 text-center">About Us</h2>
 </section>
 
@@ -94,13 +89,13 @@
           Global Light Masters Resources is Nigeria’s trusted hub for cutting-edge lighting and electrical solutions. We believe lighting is more than just function—it’s an art form that transforms spaces, moods, and moments.
         </p>
         <p>
-          From dazzling chandeliers to sleek LED panels, energy-saving bulbs, wiring accessories, sockets, and switches, our collection is handpicked to deliver quality, longevity, and beauty. Whether you're designing a luxurious home, an office, a hotel, or retail space, we tailor brilliance to your vision.
+          From dazzling chandeliers to sleek LED panels, energy-saving bulbs, wiring accessories, sockets, and switches, our collection is handpicked to deliver quality, longevity, and beauty.
         </p>
         <p>
           We also supply high-quality sockets, durable wiring equipment, and elegant standing clocks to complement your interiors. Our goal is to offer a one-stop shop for all lighting and electrical essentials.
         </p>
         <p>
-          Over the years, we’ve built strong relationships with contractors, developers, and individuals who trust our products and service. Our team is constantly innovating and staying ahead of trends, ensuring our clients get both timeless and modern lighting options in one place.
+          We’ve built strong relationships with contractors, developers, and individuals who trust our products and service. Our team is constantly innovating and staying ahead of trends.
         </p>
         <p>
           At Global Light Masters Resources, we don’t just light spaces—we illuminate dreams. Let us be your go-to partner for all your lighting and electrical needs across Nigeria and beyond.
@@ -108,7 +103,7 @@
       </div>
     </div>
     <div>
-      <img src="src/images/about-light.jpg" alt="About Image" class="rounded-lg shadow-lg">
+      <img src="images/about-light.jpg" alt="About Image" class="rounded-lg shadow-lg">
     </div>
   </div>
 </section>
@@ -119,15 +114,15 @@
     <h3 class="text-3xl md:text-4xl font-bold text-gold text-center mb-12">We Also Offer</h3>
     <div class="grid md:grid-cols-3 gap-8">
       <div class="bg-gray-900 rounded-lg shadow-lg p-4">
-        <img src="src/images/socket.png" alt="Sockets" class="w-full h-64 object-cover rounded">
+        <img src="images/socket.png" alt="Sockets" class="w-full h-64 object-cover rounded">
         <p class="text-center mt-4 text-gray-300 font-medium">High-Quality Electrical Sockets</p>
       </div>
       <div class="bg-gray-900 rounded-lg shadow-lg p-4">
-        <img src="src/images/wire.png" alt="Electrical Wires" class="w-full h-64 object-cover rounded">
+        <img src="images/wire.png" alt="Electrical Wires" class="w-full h-64 object-cover rounded">
         <p class="text-center mt-4 text-gray-300 font-medium">Durable Wiring Accessories</p>
       </div>
       <div class="bg-gray-900 rounded-lg shadow-lg p-4">
-        <img src="src/images/clock.png" alt="Standing Clocks" class="w-full h-64 object-cover rounded">
+        <img src="images/clock.png" alt="Standing Clocks" class="w-full h-64 object-cover rounded">
         <p class="text-center mt-4 text-gray-300 font-medium">Elegant Standing Clocks</p>
       </div>
     </div>
@@ -135,48 +130,45 @@
 </section>
 
 <!-- Footer -->
-  <footer class="bg-black text-white py-12">
-    <div class="max-w-7xl mx-auto px-6 grid grid-cols-1 md:grid-cols-4 gap-8 items-start">
-      <div class="space-y-4">
-        <img src="src/images/glmr-logo.png" alt="Global Light Masters Logo" class="w-40 md:w-48 mb-4">
-        <div class="flex space-x-4">
-          <a href="https://www.instagram.com/globallightmasters/" target="_blank"><img src="src/images/icon-instagram.png" alt="Instagram" class="w-6 h-6 hover:scale-110 transition"></a>
-          <a href="https://web.facebook.com/profile.php?id=61555218551473" target="_blank"><img src="src/images/icon-facebook.png" alt="Facebook" class="w-6 h-6 hover:scale-110 transition"></a>
-          <a href="#" target="_blank"><img src="src/images/icon-tiktok.png" alt="TikTok" class="w-6 h-6 hover:scale-110 transition"></a>
-        </div>
-      </div>
-      <div>
-        <h4 class="text-gold font-semibold text-lg mb-4">Useful Links</h4>
-        <ul class="space-y-2 text-sm text-gray-300">
-          <li><a href="index.html" class="hover:text-gold">Home</a></li>
-          <li><a href="about.html" class="hover:text-gold">About Us</a></li>
-          <li><a href="gallery.html" class="hover:text-gold">Gallery</a></li>
-          <li><a href="contact.html" class="hover:text-gold">Contact Us</a></li>
-        </ul>
-      </div>
-      <div>
-        <h4 class="text-gold font-semibold text-lg mb-4">Contact</h4>
-        <ul class="text-sm text-gray-300 space-y-2">
-          <li>🕘 Mon – Fri: 8.00am – 6.00pm</li>
-          <li><a href="tel:+2349168033670" class="hover:text-gold">📞 09168033670</a></li>
-          <li>📧 <a href="mailto:info@globallightmasters.com" class="text-gold hover:underline">globallightmastersresources@gmail.com</a></li>
-        </ul>
-      </div>
-      <div>
-        <h4 class="text-gold font-semibold text-lg mb-4">Address</h4>
-        <p class="text-sm text-gray-300">
-          48 Idoluwo Street (First Floor)<br>
-          port.
-        </p>
+<footer class="bg-black text-white py-12">
+  <div class="max-w-7xl mx-auto px-6 grid grid-cols-1 md:grid-cols-4 gap-8 items-start">
+    <div class="space-y-4">
+      <img src="images/glmr-logo.png" alt="Global Light Masters Logo" class="w-40 md:w-48 mb-4">
+      <div class="flex space-x-4">
+        <a href="https://www.instagram.com/globallightmasters/" target="_blank"><img src="images/icon-instagram.png" alt="Instagram" class="w-6 h-6 hover:scale-110 transition"></a>
+        <a href="https://web.facebook.com/profile.php?id=61555218551473" target="_blank"><img src="images/icon-facebook.png" alt="Facebook" class="w-6 h-6 hover:scale-110 transition"></a>
+        <a href="#" target="_blank"><img src="images/icon-tiktok.png" alt="TikTok" class="w-6 h-6 hover:scale-110 transition"></a>
       </div>
     </div>
-    <div class="text-center text-sm text-gold mt-10">
-      © 2025 Global Light Masters Resources. All rights reserved.
+    <div>
+      <h4 class="text-gold font-semibold text-lg mb-4">Useful Links</h4>
+      <ul class="space-y-2 text-sm text-gray-300">
+        <li><a href="index.html" class="hover:text-gold">Home</a></li>
+        <li><a href="about.html" class="hover:text-gold">About Us</a></li>
+        <li><a href="gallery.html" class="hover:text-gold">Gallery</a></li>
+        <li><a href="contact.html" class="hover:text-gold">Contact Us</a></li>
+      </ul>
     </div>
-  </footer>
-
-</body>
-</html>
+    <div>
+      <h4 class="text-gold font-semibold text-lg mb-4">Contact</h4>
+      <ul class="text-sm text-gray-300 space-y-2">
+        <li>🕘 Mon – Fri: 8.00am – 6.00pm</li>
+        <li><a href="tel:+2349168033670" class="hover:text-gold">📞 09168033670</a></li>
+        <li>📧 <a href="mailto:info@globallightmasters.com" class="text-gold hover:underline">globallightmastersresources@gmail.com</a></li>
+      </ul>
+    </div>
+    <div>
+      <h4 class="text-gold font-semibold text-lg mb-4">Address</h4>
+      <p class="text-sm text-gray-300">
+        48 Idoluwo Street (First Floor)<br>
+        port.
+      </p>
+    </div>
+  </div>
+  <div class="text-center text-sm text-gold mt-10">
+    © 2025 Global Light Masters Resources. All rights reserved.
+  </div>
+</footer>
 
 <!-- WhatsApp Floating Button -->
 <a
@@ -185,6 +177,15 @@
   target="_blank"
   aria-label="Chat on WhatsApp"
 >
-  <img src="src/images/icon-whatsapp.png" alt="WhatsApp" class="w-6 h-6" />
-  Chat with us
+  <img src="images/icon-whatsapp.png" alt="WhatsApp" class="w-6 h-6" />
+  <span class="hidden sm:inline">Chat with us</span>
 </a>
+
+<script>
+  document.getElementById('navToggle')?.addEventListener('click', function () {
+    const menu = document.getElementById('mobileMenu');
+    menu?.classList.toggle('hidden');
+  });
+</script>
+
+</body>
