--- a/public/contact.html
+++ b/public/contact.html
@@ -52,21 +52,16 @@
 
 <body class="bg-gray-900 text-white font-serif">
 
- <!-- Navbar -->
+<!-- Navbar -->
 <nav class="bg-black py-4 px-6 fixed top-0 w-full z-[100] luxury-shadow">
   <div class="flex justify-between items-center">
-    <!-- Logo and Brand Name -->
     <a href="index.html" class="flex items-center space-x-2">
-      <img src="src/images/glmr-logo.png" alt="GLMR Logo" class="w-12 h-12 object-contain">
+      <img src="images/glmr-logo.png" alt="GLMR Logo" class="w-12 h-12 object-contain">
       <h1 class="text-base sm:text-lg md:text-2xl font-bold text-gold whitespace-nowrap">Global Light Masters Resources</h1>
     </a>
 
-    <!-- Hamburger Menu Icon -->
-    <button id="navToggle" class="md:hidden text-gold text-3xl focus:outline-none">
-      ☰
-    </button>
+    <button id="navToggle" class="md:hidden text-gold text-3xl focus:outline-none">☰</button>
 
-    <!-- Desktop Nav -->
     <div id="navMenu" class="hidden md:flex space-x-6 text-lg font-medium">
       <a href="index.html" class="text-gold">Home</a>
       <a href="about.html" class="hover:text-gold">About</a>
@@ -75,7 +70,6 @@
     </div>
   </div>
 
-  <!-- Mobile Nav -->
   <div id="mobileMenu" class="md:hidden hidden mt-4 space-y-2">
     <a href="index.html" class="block text-gold">Home</a>
     <a href="about.html" class="block hover:text-gold">About</a>
@@ -84,94 +78,91 @@
   </div>
 </nav>
 
-  <!-- Hero Section -->
-  <section class="relative h-screen flex items-center justify-center pt-24 pb-24 animate-fade-up">
-<img src="src/images/contact-hero.jpg" alt="Contact Background" class="absolute inset-0 w-full h-full object-cover opacity-10 z-0" />
-    <h2 class="text-5xl md:text-6xl font-bold gradient-gold drop-shadow-lg z-10 text-center">Contact Us</h2>
-  </section>
+<!-- Hero Section -->
+<section class="relative h-screen flex items-center justify-center pt-24 pb-24 animate-fade-up">
+  <img src="images/contact-hero.jpg" alt="Contact Background" class="absolute inset-0 w-full h-full object-cover opacity-10 z-0" />
+  <h2 class="text-5xl md:text-6xl font-bold gradient-gold drop-shadow-lg z-10 text-center">Contact Us</h2>
+</section>
 
-  <!-- Contact Boxes -->
-  <section class="py-20 px-6 bg-gray-900">
-    <div class="max-w-6xl mx-auto grid grid-cols-1 md:grid-cols-3 gap-12 text-center animate-slideUp">
-      
-      <!-- WhatsApp Box -->
-      <div class="bg-gray-800 p-8 rounded-lg shadow-md hover-glow transition-all">
-        <a href="https://wa.me/2349168033670" target="_blank">
-          <img src="src/images/icon-whatsapp.png" alt="WhatsApp" class="mx-auto mb-4 w-12 h-12">
+<!-- Contact Boxes -->
+<section class="py-20 px-6 bg-gray-900">
+  <div class="max-w-6xl mx-auto grid grid-cols-1 md:grid-cols-3 gap-12 text-center animate-slideUp">
+
+    <div class="bg-gray-800 p-8 rounded-lg shadow-md hover-glow transition-all">
+      <a href="https://wa.me/2349168033670" target="_blank">
+        <img src="images/icon-whatsapp.png" alt="WhatsApp" class="mx-auto mb-4 w-12 h-12">
+      </a>
+      <h4 class="text-2xl font-semibold text-gold mb-2">WhatsApp</h4>
+      <p class="text-gray-300">Chat directly with us<br><strong>+234 916 803 3670</strong></p>
+    </div>
+
+    <div class="bg-gray-800 p-8 rounded-lg shadow-md hover-glow transition-all">
+      <a href="tel:+2349168033670">
+        <img src="images/icon-contact.png" alt="Phone" class="mx-auto mb-4 w-12 h-12">
+      </a>
+      <h4 class="text-2xl font-semibold text-gold mb-2">Call Us</h4>
+      <p class="text-gray-300">Mon – Fri: 8am – 6pm<br><strong>+234 916 803 3670</strong></p>
+    </div>
+
+    <div class="bg-gray-800 p-8 rounded-lg shadow-md hover-glow transition-all">
+      <img src="images/icon-socials.png" alt="Social Media" class="mx-auto mb-4 w-12 h-12">
+      <h4 class="text-2xl font-semibold text-gold mb-2">Follow Us</h4>
+      <div class="flex justify-center space-x-4 mt-2">
+        <a href="https://www.instagram.com/globallightmasters/" target="_blank">
+          <img src="images/icon-instagram.png" alt="Instagram" class="w-6 h-6 hover:scale-110 transition">
         </a>
-        <h4 class="text-2xl font-semibold text-gold mb-2">WhatsApp</h4>
-        <p class="text-gray-300">Chat directly with us<br><strong>+234 916 803 3670</strong></p>
-      </div>
-
-      <!-- Call Box -->
-      <div class="bg-gray-800 p-8 rounded-lg shadow-md hover-glow transition-all">
-        <a href="tel:+2349168033670">
-          <img src="src/images/icon-contact.png" alt="Phone" class="mx-auto mb-4 w-12 h-12">
+        <a href="https://web.facebook.com/profile.php?id=61555218551473" target="_blank">
+          <img src="images/icon-facebook.png" alt="Facebook" class="w-6 h-6 hover:scale-110 transition">
         </a>
-        <h4 class="text-2xl font-semibold text-gold mb-2">Call Us</h4>
-        <p class="text-gray-300">Mon – Fri: 8am – 6pm<br><strong>+234 916 803 3670</strong></p>
-      </div>
-
-      <!-- Socials Box -->
-      <div class="bg-gray-800 p-8 rounded-lg shadow-md hover-glow transition-all">
-        <img src="src/images/icon-socials.png" alt="Social Media" class="mx-auto mb-4 w-12 h-12">
-        <h4 class="text-2xl font-semibold text-gold mb-2">Follow Us</h4>
-        <div class="flex justify-center space-x-4 mt-2">
-          <a href="https://www.instagram.com/globallightmasters/" target="_blank">
-            <img src="src/images/icon-instagram.png" alt="Instagram" class="w-6 h-6 hover:scale-110 transition">
-          </a>
-          <a href="https://web.facebook.com/profile.php?id=61555218551473" target="_blank">
-            <img src="src/images/icon-facebook.png" alt="Facebook" class="w-6 h-6 hover:scale-110 transition">
-          </a>
-          <a href="#" target="_blank">
-            <img src="src/images/icon-tiktok.png" alt="TikTok" class="w-6 h-6 hover:scale-110 transition">
-          </a>
-        </div>
-      </div>
-
-    </div>
-  </section>
-
-  <!-- Footer -->
-  <footer class="bg-black text-white py-12">
-    <div class="max-w-7xl mx-auto px-6 grid grid-cols-1 md:grid-cols-4 gap-8 items-start">
-      <div class="space-y-4">
-        <img src="src/images/glmr-logo.png" alt="Global Light Masters Logo" class="w-40 md:w-48 mb-4">
-        <div class="flex space-x-4">
-          <a href="https://www.instagram.com/globallightmasters/" target="_blank"><img src="src/images/icon-instagram.png" alt="Instagram" class="w-6 h-6 hover:scale-110 transition"></a>
-          <a href="https://web.facebook.com/profile.php?id=61555218551473" target="_blank"><img src="src/images/icon-facebook.png" alt="Facebook" class="w-6 h-6 hover:scale-110 transition"></a>
-          <a href="#" target="_blank"><img src="src/images/icon-tiktok.png" alt="TikTok" class="w-6 h-6 hover:scale-110 transition"></a>
-        </div>
-      </div>
-      <div>
-        <h4 class="text-gold font-semibold text-lg mb-4">Useful Links</h4>
-        <ul class="space-y-2 text-sm text-gray-300">
-          <li><a href="index.html" class="hover:text-gold">Home</a></li>
-          <li><a href="about.html" class="hover:text-gold">About Us</a></li>
-          <li><a href="gallery.html" class="hover:text-gold">Gallery</a></li>
-          <li><a href="contact.html" class="hover:text-gold">Contact Us</a></li>
-        </ul>
-      </div>
-      <div>
-        <h4 class="text-gold font-semibold text-lg mb-4">Contact</h4>
-        <ul class="text-sm text-gray-300 space-y-2">
-          <li>🕘 Mon – Fri: 8.00am – 6.00pm</li>
-          <li><a href="tel:+2349168033670" class="hover:text-gold">📞 09168033670</a></li>
-          <li>📧 <a href="mailto:info@globallightmasters.com" class="text-gold hover:underline">globallightmastersresources@gmail.com</a></li>
-        </ul>
-      </div>
-      <div>
-        <h4 class="text-gold font-semibold text-lg mb-4">Address</h4>
-        <p class="text-sm text-gray-300">
-          48 Idoluwo Street (First Floor)<br>
-          port.
-        </p>
+        <a href="#" target="_blank">
+          <img src="images/icon-tiktok.png" alt="TikTok" class="w-6 h-6 hover:scale-110 transition">
+        </a>
       </div>
     </div>
-    <div class="text-center text-sm text-gold mt-10">
-      © 2025 Global Light Masters Resources. All rights reserved.
+
+  </div>
+</section>
+
+<!-- Footer -->
+<footer class="bg-black text-white py-12">
+  <div class="max-w-7xl mx-auto px-6 grid grid-cols-1 md:grid-cols-4 gap-8 items-start">
+    <div class="space-y-4">
+      <img src="images/glmr-logo.png" alt="Global Light Masters Logo" class="w-40 md:w-48 mb-4">
+      <div class="flex space-x-4">
+        <a href="https://www.instagram.com/globallightmasters/" target="_blank"><img src="images/icon-instagram.png" alt="Instagram" class="w-6 h-6 hover:scale-110 transition"></a>
+        <a href="https://web.facebook.com/profile.php?id=61555218551473" target="_blank"><img src="images/icon-facebook.png" alt="Facebook" class="w-6 h-6 hover:scale-110 transition"></a>
+        <a href="#" target="_blank"><img src="images/icon-tiktok.png" alt="TikTok" class="w-6 h-6 hover:scale-110 transition"></a>
+      </div>
     </div>
-  </footer>
+    <div>
+      <h4 class="text-gold font-semibold text-lg mb-4">Useful Links</h4>
+      <ul class="space-y-2 text-sm text-gray-300">
+        <li><a href="index.html" class="hover:text-gold">Home</a></li>
+        <li><a href="about.html" class="hover:text-gold">About Us</a></li>
+        <li><a href="gallery.html" class="hover:text-gold">Gallery</a></li>
+        <li><a href="contact.html" class="hover:text-gold">Contact Us</a></li>
+      </ul>
+    </div>
+    <div>
+      <h4 class="text-gold font-semibold text-lg mb-4">Contact</h4>
+      <ul class="text-sm text-gray-300 space-y-2">
+        <li>🕘 Mon – Fri: 8.00am – 6.00pm</li>
+        <li><a href="tel:+2349168033670" class="hover:text-gold">📞 09168033670</a></li>
+        <li>📧 <a href="mailto:info@globallightmasters.com" class="text-gold hover:underline">globallightmastersresources@gmail.com</a></li>
+      </ul>
+    </div>
+    <div>
+      <h4 class="text-gold font-semibold text-lg mb-4">Address</h4>
+      <p class="text-sm text-gray-300">
+        48 Idoluwo Street (First Floor)<br>
+        port.
+      </p>
+    </div>
+  </div>
+  <div class="text-center text-sm text-gold mt-10">
+    © 2025 Global Light Masters Resources. All rights reserved.
+  </div>
+</footer>
 
 <!-- WhatsApp Floating Button -->
 <a
@@ -180,11 +171,10 @@
   target="_blank"
   aria-label="Chat on WhatsApp"
 >
-  <img src="src/images/icon-whatsapp.png" alt="WhatsApp" class="w-6 h-6" />
+  <img src="images/icon-whatsapp.png" alt="WhatsApp" class="w-6 h-6" />
   <span class="hidden sm:inline">Chat with us</span>
 </a>
 
-<!-- ✅ Mobile Menu Toggle Script -->
 <script>
   document.getElementById('navToggle')?.addEventListener('click', function () {
     const menu = document.getElementById('mobileMenu');
