--- a/public/gallery.html
+++ b/public/gallery.html
@@ -38,82 +38,72 @@
 <body class="bg-gray-900 text-white font-serif">
 
   <!-- Navbar -->
-<nav class="bg-black py-4 px-6 fixed top-0 w-full z-[100] luxury-shadow">
-  <div class="flex justify-between items-center">
-    <!-- Logo and Brand Name -->
-    <a href="index.html" class="flex items-center space-x-2">
-      <img src="src/images/glmr-logo.png" alt="GLMR Logo" class="w-12 h-12 object-contain">
-      <h1 class="text-base sm:text-lg md:text-2xl font-bold text-gold whitespace-nowrap">Global Light Masters Resources</h1>
-    </a>
-
-    <!-- Hamburger Menu Icon -->
-    <button id="navToggle" class="md:hidden text-gold text-3xl focus:outline-none">
-      ☰
-    </button>
-
-    <!-- Desktop Nav -->
-    <div id="navMenu" class="hidden md:flex space-x-6 text-lg font-medium">
-      <a href="index.html" class="text-gold">Home</a>
-      <a href="about.html" class="hover:text-gold">About</a>
-      <a href="contact.html" class="hover:text-gold">Contact</a>
-      <a href="gallery.html" class="hover:text-gold">Gallery</a>
+  <nav class="bg-black py-4 px-6 fixed top-0 w-full z-[100] luxury-shadow">
+    <div class="flex justify-between items-center">
+      <a href="index.html" class="flex items-center space-x-2">
+        <img src="images/glmr-logo.png" alt="GLMR Logo" class="w-12 h-12 object-contain">
+        <h1 class="text-base sm:text-lg md:text-2xl font-bold text-gold whitespace-nowrap">Global Light Masters Resources</h1>
+      </a>
+      <button id="navToggle" class="md:hidden text-gold text-3xl focus:outline-none">☰</button>
+      <div id="navMenu" class="hidden md:flex space-x-6 text-lg font-medium">
+        <a href="index.html" class="text-gold">Home</a>
+        <a href="about.html" class="hover:text-gold">About</a>
+        <a href="contact.html" class="hover:text-gold">Contact</a>
+        <a href="gallery.html" class="hover:text-gold">Gallery</a>
+      </div>
     </div>
-  </div>
+    <div id="mobileMenu" class="md:hidden hidden mt-4 space-y-2">
+      <a href="index.html" class="block text-gold">Home</a>
+      <a href="about.html" class="block hover:text-gold">About</a>
+      <a href="contact.html" class="block hover:text-gold">Contact</a>
+      <a href="gallery.html" class="block hover:text-gold">Gallery</a>
+    </div>
+  </nav>
 
-  <!-- Mobile Nav -->
-  <div id="mobileMenu" class="md:hidden hidden mt-4 space-y-2">
-    <a href="index.html" class="block text-gold">Home</a>
-    <a href="about.html" class="block hover:text-gold">About</a>
-    <a href="contact.html" class="block hover:text-gold">Contact</a>
-    <a href="gallery.html" class="block hover:text-gold">Gallery</a>
-  </div>
-</nav>
-
-  <!-- Hero Section for Gallery -->
+  <!-- Hero -->
   <section class="relative h-screen flex items-center justify-center pt-24 pb-24 animate-fade-up">
-
-    <img src="src/images/contact-hero.jpg" alt="Gallery Background" class="absolute inset-0 w-full h-full object-cover opacity-10 z-0" />
+    <img src="images/contact-hero.jpg" alt="Gallery Background" class="absolute inset-0 w-full h-full object-cover opacity-10 z-0" />
     <h2 class="text-5xl md:text-6xl font-bold gradient-gold drop-shadow-lg z-10 text-center">Gallery</h2>
   </section>
 
-  <!-- Gallery Section -->
+  <!-- Gallery Grid -->
   <section class="py-16 px-6 md:px-16 bg-gray-900 text-gray-200">
     <div class="max-w-6xl mx-auto">
       <div class="grid md:grid-cols-3 gap-8">
         <!-- 20 Images -->
-        <div class="bg-gray-800 rounded-lg overflow-hidden luxury-shadow hover-glow"><img src="src/images/picture1.jpg" alt="Gallery 1" class="w-full h-60 object-cover" /></div>
-        <div class="bg-gray-800 rounded-lg overflow-hidden luxury-shadow hover-glow"><img src="src/images/picture2.jpg" alt="Gallery 2" class="w-full h-60 object-cover" /></div>
-        <div class="bg-gray-800 rounded-lg overflow-hidden luxury-shadow hover-glow"><img src="src/images/picture3.jpg" alt="Gallery 3" class="w-full h-60 object-cover" /></div>
-        <div class="bg-gray-800 rounded-lg overflow-hidden luxury-shadow hover-glow"><img src="src/images/picture4.jpg" alt="Gallery 4" class="w-full h-60 object-cover" /></div>
-        <div class="bg-gray-800 rounded-lg overflow-hidden luxury-shadow hover-glow"><img src="src/images/picture5.jpg" alt="Gallery 5" class="w-full h-60 object-cover" /></div>
-        <div class="bg-gray-800 rounded-lg overflow-hidden luxury-shadow hover-glow"><img src="src/images/picture6.jpg" alt="Gallery 6" class="w-full h-60 object-cover" /></div>
-        <div class="bg-gray-800 rounded-lg overflow-hidden luxury-shadow hover-glow"><img src="src/images/picture7.jpg" alt="Gallery 7" class="w-full h-60 object-cover" /></div>
-        <div class="bg-gray-800 rounded-lg overflow-hidden luxury-shadow hover-glow"><img src="src/images/picture8.jpg" alt="Gallery 8" class="w-full h-60 object-cover" /></div>
-        <div class="bg-gray-800 rounded-lg overflow-hidden luxury-shadow hover-glow"><img src="src/images/picture9.jpg" alt="Gallery 9" class="w-full h-60 object-cover" /></div>
-        <div class="bg-gray-800 rounded-lg overflow-hidden luxury-shadow hover-glow"><img src="src/images/picture10.jpg" alt="Gallery 10" class="w-full h-60 object-cover" /></div>
-        <div class="bg-gray-800 rounded-lg overflow-hidden luxury-shadow hover-glow"><img src="src/images/picture11.jpg" alt="Gallery 11" class="w-full h-60 object-cover" /></div>
-        <div class="bg-gray-800 rounded-lg overflow-hidden luxury-shadow hover-glow"><img src="src/images/picture12.jpg" alt="Gallery 12" class="w-full h-60 object-cover" /></div>
-        <div class="bg-gray-800 rounded-lg overflow-hidden luxury-shadow hover-glow"><img src="src/images/picture13.jpg" alt="Gallery 13" class="w-full h-60 object-cover" /></div>
-        <div class="bg-gray-800 rounded-lg overflow-hidden luxury-shadow hover-glow"><img src="src/images/picture14.jpg" alt="Gallery 14" class="w-full h-60 object-cover" /></div>
-        <div class="bg-gray-800 rounded-lg overflow-hidden luxury-shadow hover-glow"><img src="src/images/picture15.jpg" alt="Gallery 15" class="w-full h-60 object-cover" /></div>
-        <div class="bg-gray-800 rounded-lg overflow-hidden luxury-shadow hover-glow"><img src="src/images/picture16.jpg" alt="Gallery 16" class="w-full h-60 object-cover" /></div>
-        <div class="bg-gray-800 rounded-lg overflow-hidden luxury-shadow hover-glow"><img src="src/images/picture17.jpg" alt="Gallery 17" class="w-full h-60 object-cover" /></div>
-        <div class="bg-gray-800 rounded-lg overflow-hidden luxury-shadow hover-glow"><img src="src/images/picture18.jpg" alt="Gallery 18" class="w-full h-60 object-cover" /></div>
-        <div class="bg-gray-800 rounded-lg overflow-hidden luxury-shadow hover-glow"><img src="src/images/picture19.jpg" alt="Gallery 19" class="w-full h-60 object-cover" /></div>
-        <div class="bg-gray-800 rounded-lg overflow-hidden luxury-shadow hover-glow"><img src="src/images/picture20.jpg" alt="Gallery 20" class="w-full h-60 object-cover" /></div>
+        <div class="bg-gray-800 rounded-lg overflow-hidden luxury-shadow hover-glow"><img src="images/picture1.jpg" alt="Gallery 1" class="w-full h-60 object-cover" /></div>
+        <div class="bg-gray-800 rounded-lg overflow-hidden luxury-shadow hover-glow"><img src="images/picture2.jpg" alt="Gallery 2" class="w-full h-60 object-cover" /></div>
+        <div class="bg-gray-800 rounded-lg overflow-hidden luxury-shadow hover-glow"><img src="images/picture3.jpg" alt="Gallery 3" class="w-full h-60 object-cover" /></div>
+        <div class="bg-gray-800 rounded-lg overflow-hidden luxury-shadow hover-glow"><img src="images/picture4.jpg" alt="Gallery 4" class="w-full h-60 object-cover" /></div>
+        <div class="bg-gray-800 rounded-lg overflow-hidden luxury-shadow hover-glow"><img src="images/picture5.jpg" alt="Gallery 5" class="w-full h-60 object-cover" /></div>
+        <div class="bg-gray-800 rounded-lg overflow-hidden luxury-shadow hover-glow"><img src="images/picture6.jpg" alt="Gallery 6" class="w-full h-60 object-cover" /></div>
+        <div class="bg-gray-800 rounded-lg overflow-hidden luxury-shadow hover-glow"><img src="images/picture7.jpg" alt="Gallery 7" class="w-full h-60 object-cover" /></div>
+        <div class="bg-gray-800 rounded-lg overflow-hidden luxury-shadow hover-glow"><img src="images/picture8.jpg" alt="Gallery 8" class="w-full h-60 object-cover" /></div>
+        <div class="bg-gray-800 rounded-lg overflow-hidden luxury-shadow hover-glow"><img src="images/picture9.jpg" alt="Gallery 9" class="w-full h-60 object-cover" /></div>
+        <div class="bg-gray-800 rounded-lg overflow-hidden luxury-shadow hover-glow"><img src="images/picture10.jpg" alt="Gallery 10" class="w-full h-60 object-cover" /></div>
+        <div class="bg-gray-800 rounded-lg overflow-hidden luxury-shadow hover-glow"><img src="images/picture11.jpg" alt="Gallery 11" class="w-full h-60 object-cover" /></div>
+        <div class="bg-gray-800 rounded-lg overflow-hidden luxury-shadow hover-glow"><img src="images/picture12.jpg" alt="Gallery 12" class="w-full h-60 object-cover" /></div>
+        <div class="bg-gray-800 rounded-lg overflow-hidden luxury-shadow hover-glow"><img src="images/picture13.jpg" alt="Gallery 13" class="w-full h-60 object-cover" /></div>
+        <div class="bg-gray-800 rounded-lg overflow-hidden luxury-shadow hover-glow"><img src="images/picture14.jpg" alt="Gallery 14" class="w-full h-60 object-cover" /></div>
+        <div class="bg-gray-800 rounded-lg overflow-hidden luxury-shadow hover-glow"><img src="images/picture15.jpg" alt="Gallery 15" class="w-full h-60 object-cover" /></div>
+        <div class="bg-gray-800 rounded-lg overflow-hidden luxury-shadow hover-glow"><img src="images/picture16.jpg" alt="Gallery 16" class="w-full h-60 object-cover" /></div>
+        <div class="bg-gray-800 rounded-lg overflow-hidden luxury-shadow hover-glow"><img src="images/picture17.jpg" alt="Gallery 17" class="w-full h-60 object-cover" /></div>
+        <div class="bg-gray-800 rounded-lg overflow-hidden luxury-shadow hover-glow"><img src="images/picture18.jpg" alt="Gallery 18" class="w-full h-60 object-cover" /></div>
+        <div class="bg-gray-800 rounded-lg overflow-hidden luxury-shadow hover-glow"><img src="images/picture19.jpg" alt="Gallery 19" class="w-full h-60 object-cover" /></div>
+        <div class="bg-gray-800 rounded-lg overflow-hidden luxury-shadow hover-glow"><img src="images/picture20.jpg" alt="Gallery 20" class="w-full h-60 object-cover" /></div>
       </div>
     </div>
   </section>
 
- <!-- Footer -->
+  <!-- Footer -->
   <footer class="bg-black text-white py-12">
     <div class="max-w-7xl mx-auto px-6 grid grid-cols-1 md:grid-cols-4 gap-8 items-start">
       <div class="space-y-4">
-        <img src="src/images/glmr-logo.png" alt="Global Light Masters Logo" class="w-40 md:w-48 mb-4">
+        <img src="images/glmr-logo.png" alt="Global Light Masters Logo" class="w-40 md:w-48 mb-4">
         <div class="flex space-x-4">
-          <a href="https://www.instagram.com/globallightmasters/" target="_blank"><img src="src/images/icon-instagram.png" alt="Instagram" class="w-6 h-6 hover:scale-110 transition"></a>
-          <a href="https://web.facebook.com/profile.php?id=61555218551473" target="_blank"><img src="src/images/icon-facebook.png" alt="Facebook" class="w-6 h-6 hover:scale-110 transition"></a>
-          <a href="#" target="_blank"><img src="src/images/icon-tiktok.png" alt="TikTok" class="w-6 h-6 hover:scale-110 transition"></a>
+          <a href="https://www.instagram.com/globallightmasters/" target="_blank"><img src="images/icon-instagram.png" alt="Instagram" class="w-6 h-6 hover:scale-110 transition"></a>
+          <a href="https://web.facebook.com/profile.php?id=61555218551473" target="_blank"><img src="images/icon-facebook.png" alt="Facebook" class="w-6 h-6 hover:scale-110 transition"></a>
+          <a href="#" target="_blank"><img src="images/icon-tiktok.png" alt="TikTok" class="w-6 h-6 hover:scale-110 transition"></a>
         </div>
       </div>
       <div>
@@ -146,24 +136,19 @@
     </div>
   </footer>
 
-<!-- WhatsApp Floating Button -->
-<a
-  href="https://wa.me/2349168033670"
-  class="fixed bottom-6 right-6 z-50 bg-green-500 hover:bg-green-600 text-white px-4 py-3 rounded-full shadow-lg flex items-center gap-2 transition"
-  target="_blank"
-  aria-label="Chat on WhatsApp"
->
-  <img src="src/images/icon-whatsapp.png" alt="WhatsApp" class="w-6 h-6" />
-  <span class="hidden sm:inline">Chat with us</span>
-</a>
+  <!-- WhatsApp Button -->
+  <a href="https://wa.me/2349168033670" class="fixed bottom-6 right-6 z-50 bg-green-500 hover:bg-green-600 text-white px-4 py-3 rounded-full shadow-lg flex items-center gap-2 transition" target="_blank" aria-label="Chat on WhatsApp">
+    <img src="images/icon-whatsapp.png" alt="WhatsApp" class="w-6 h-6" />
+    <span class="hidden sm:inline">Chat with us</span>
+  </a>
 
-<!-- ✅ Mobile Menu Toggle Script -->
-<script>
-  document.getElementById('navToggle')?.addEventListener('click', function () {
-    const menu = document.getElementById('mobileMenu');
-    menu?.classList.toggle('hidden');
-  });
-</script>
+  <!-- Menu Toggle Script -->
+  <script>
+    document.getElementById('navToggle')?.addEventListener('click', function () {
+      const menu = document.getElementById('mobileMenu');
+      menu?.classList.toggle('hidden');
+    });
+  </script>
 
 </body>
 </html>
