--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   <div class="flex justify-between items-center">
     <!-- Logo and Name -->
     <a href="index.html" class="flex items-center space-x-2">
-      <img src="src/images/glmr-logo.png" alt="GLMR Logo" class="w-12 h-12 object-contain">
+      <img src="images/glmr-logo.png" alt="GLMR Logo" class="w-12 h-12 object-contain">
       <h1 class="text-base sm:text-lg md:text-2xl font-bold text-gold whitespace-nowrap">Global Light Masters Resources</h1>
     </a>
 
@@ -83,7 +83,7 @@
 <!-- Hero Section -->
 <section class="relative h-screen flex items-center justify-center pt-24 pb-24 animate-fade-up">
 
-  <img src="src/images/hero.jpg" alt="Luxury Lighting" class="absolute inset-0 object-cover w-full h-full opacity-40" />
+  <img src="images/hero.jpg" alt="Luxury Lighting" class="absolute inset-0 object-cover w-full h-full opacity-40" />
   <div class="absolute inset-0 bg-gradient-to-b from-black/80 via-black/60 to-black/80"></div>
 
   <div class="relative z-10 text-center px-4 max-w-4xl mx-auto bg-black/50 backdrop-blur-sm rounded-xl p-8 shadow-2xl">
@@ -112,17 +112,17 @@
   <!-- Lighting Feature Cards -->
   <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-10 max-w-6xl mx-auto">
     <div class="bg-gray-800 border border-gold p-6 rounded-xl shadow-lg hover-glow">
-      <img src="src/images/icon-chandelier.png" alt="Chandelier Icon" class="w-16 h-16 mx-auto mb-4">
+      <img src="images/icon-chandelier.png" alt="Chandelier Icon" class="w-16 h-16 mx-auto mb-4">
       <h4 class="text-xl font-semibold text-gold mb-2">Chandeliers</h4>
       <p class="text-gray-400 text-sm">Timeless elegance hanging in every room. Explore our luxurious chandelier range.</p>
     </div>
     <div class="bg-gray-800 border border-gold p-6 rounded-xl shadow-lg hover-glow">
-      <img src="src/images/icon-pendant.png" alt="Pendant Light Icon" class="w-16 h-16 mx-auto mb-4">
+      <img src="images/icon-pendant.png" alt="Pendant Light Icon" class="w-16 h-16 mx-auto mb-4">
       <h4 class="text-xl font-semibold text-gold mb-2">Pendant Lights</h4>
       <p class="text-gray-400 text-sm">Stylish and minimal, perfect for dining and kitchen areas. Make your space shine.</p>
     </div>
     <div class="bg-gray-800 border border-gold p-6 rounded-xl shadow-lg hover-glow">
-      <img src="src/images/icon-led.png" alt="LED Icon" class="w-16 h-16 mx-auto mb-4">
+      <img src="images/icon-led.png" alt="LED Icon" class="w-16 h-16 mx-auto mb-4">
       <h4 class="text-xl font-semibold text-gold mb-2">LED Lighting</h4>
       <p class="text-gray-400 text-sm">Energy-efficient brilliance to illuminate your lifestyle and save on power bills.</p>
     </div>
@@ -134,21 +134,21 @@
   <h3 class="text-3xl md:text-4xl font-bold gradient-gold mb-12">Explore Our Lighting Categories</h3>
   <div class="grid md:grid-cols-3 gap-10 max-w-7xl mx-auto">
     <div class="bg-gray-800 rounded-lg overflow-hidden shadow-md hover-glow transition">
-      <img src="src/images/ceiling-lights.png" alt="Ceiling Lights" class="w-full h-64 object-cover">
+      <img src="images/ceiling-lights.png" alt="Ceiling Lights" class="w-full h-64 object-cover">
       <div class="p-6">
         <h4 class="text-xl font-bold text-gold mb-2">Ceiling Lights</h4>
         <p class="text-gray-300 text-sm">For all budgets and styles. Brighten up your space beautifully.</p>
       </div>
     </div>
     <div class="bg-gray-800 rounded-lg overflow-hidden shadow-md hover-glow transition">
-      <img src="src/images/wall-lights.png" alt="Wall Lights" class="w-full h-64 object-cover">
+      <img src="images/wall-lights.png" alt="Wall Lights" class="w-full h-64 object-cover">
       <div class="p-6">
         <h4 class="text-xl font-bold text-gold mb-2">Wall Lights</h4>
         <p class="text-gray-300 text-sm">Elegant wall sconces to elevate your ambiance with style.</p>
       </div>
     </div>
     <div class="bg-gray-800 rounded-lg overflow-hidden shadow-md hover-glow transition">
-      <img src="src/images/outdoor-lights.png" alt="Outdoor Lights" class="w-full h-64 object-cover">
+      <img src="images/outdoor-lights.png" alt="Outdoor Lights" class="w-full h-64 object-cover">
       <div class="p-6">
         <h4 class="text-xl font-bold text-gold mb-2">Outdoor Lights</h4>
         <p class="text-gray-300 text-sm">Secure and brighten your home’s exterior with class.</p>
@@ -162,28 +162,28 @@
   <h3 class="text-4xl md:text-5xl font-bold text-center gradient-gold mb-16">What Makes Us Stand Out</h3>
   <div class="max-w-6xl mx-auto grid grid-cols-1 md:grid-cols-2 gap-12">
     <div class="flex items-start gap-4">
-      <img src="src/images/icon-standout-lamp.png" alt="Quality" class="w-10 h-10 mt-1">
+      <img src="images/icon-standout-lamp.png" alt="Quality" class="w-10 h-10 mt-1">
       <div>
         <h4 class="text-xl font-semibold text-gold mb-1">Quality</h4>
         <p class="text-gray-300 text-sm">We deliver impeccable standards with every product. Customer satisfaction is our driving force.</p>
       </div>
     </div>
     <div class="flex items-start gap-4">
-      <img src="src/images/icon-standout-lamp.png" alt="Passion" class="w-10 h-10 mt-1">
+      <img src="images/icon-standout-lamp.png" alt="Passion" class="w-10 h-10 mt-1">
       <div>
         <h4 class="text-xl font-semibold text-gold mb-1">Passionate about Lighting</h4>
         <p class="text-gray-300 text-sm">We are driven by trends and passion. Our mission is to light up lives with the latest innovations.</p>
       </div>
     </div>
     <div class="flex items-start gap-4">
-      <img src="src/images/icon-standout-lamp.png" alt="Innovation" class="w-10 h-10 mt-1">
+      <img src="images/icon-standout-lamp.png" alt="Innovation" class="w-10 h-10 mt-1">
       <div>
         <h4 class="text-xl font-semibold text-gold mb-1">Innovation</h4>
         <p class="text-gray-300 text-sm">We never stop evolving. We always seek the next big solution for lighting excellence.</p>
       </div>
     </div>
     <div class="flex items-start gap-4">
-      <img src="src/images/icon-standout-lamp.png" alt="Proud" class="w-10 h-10 mt-1">
+      <img src="images/icon-standout-lamp.png" alt="Proud" class="w-10 h-10 mt-1">
       <div>
         <h4 class="text-xl font-semibold text-gold mb-1">From Here, Proudly</h4>
         <p class="text-gray-300 text-sm">Rooted in Nigeria, inspired by the world. We are proud to light homes and hearts across the country.</p>
@@ -196,11 +196,11 @@
   <footer class="bg-black text-white py-12">
     <div class="max-w-7xl mx-auto px-6 grid grid-cols-1 md:grid-cols-4 gap-8 items-start">
       <div class="space-y-4">
-        <img src="src/images/glmr-logo.png" alt="Global Light Masters Logo" class="w-40 md:w-48 mb-4">
+        <img src="images/glmr-logo.png" alt="Global Light Masters Logo" class="w-40 md:w-48 mb-4">
         <div class="flex space-x-4">
-          <a href="https://www.instagram.com/globallightmasters/" target="_blank"><img src="src/images/icon-instagram.png" alt="Instagram" class="w-6 h-6 hover:scale-110 transition"></a>
-          <a href="https://web.facebook.com/profile.php?id=61555218551473" target="_blank"><img src="src/images/icon-facebook.png" alt="Facebook" class="w-6 h-6 hover:scale-110 transition"></a>
-          <a href="#" target="_blank"><img src="src/images/icon-tiktok.png" alt="TikTok" class="w-6 h-6 hover:scale-110 transition"></a>
+          <a href="https://www.instagram.com/globallightmasters/" target="_blank"><img src="images/icon-instagram.png" alt="Instagram" class="w-6 h-6 hover:scale-110 transition"></a>
+          <a href="https://web.facebook.com/profile.php?id=61555218551473" target="_blank"><img src="images/icon-facebook.png" alt="Facebook" class="w-6 h-6 hover:scale-110 transition"></a>
+          <a href="#" target="_blank"><img src="images/icon-tiktok.png" alt="TikTok" class="w-6 h-6 hover:scale-110 transition"></a>
         </div>
       </div>
       <div>
@@ -216,15 +216,15 @@
         <h4 class="text-gold font-semibold text-lg mb-4">Contact</h4>
         <ul class="text-sm text-gray-300 space-y-2">
           <li>🕘 Mon – Fri: 8.00am – 6.00pm</li>
-          <li><a href="tel:+2349168033670" class="hover:text-gold">📞 09168033670</a></li>
+          <li><a href="tel:+2348033368919" class="hover:text-gold">📞 08033368919</a></li>
           <li>📧 <a href="mailto:info@globallightmasters.com" class="text-gold hover:underline">globallightmastersresources@gmail.com</a></li>
         </ul>
       </div>
       <div>
         <h4 class="text-gold font-semibold text-lg mb-4">Address</h4>
         <p class="text-sm text-gray-300">
-          48 Idoluwo Street (First Floor)<br>
-          port.
+          15 Okija Street<br>
+          Port Harcourt
         </p>
       </div>
     </div>
@@ -240,7 +240,7 @@
   target="_blank"
   aria-label="Chat on WhatsApp"
 >
-  <img src="src/images/icon-whatsapp.png" alt="WhatsApp" class="w-6 h-6" />
+  <img src="images/icon-whatsapp.png" alt="WhatsApp" class="w-6 h-6" />
   <span class="hidden sm:inline">Chat with us</span>
 </a>
 
@@ -253,4 +253,3 @@
 </script>
 
 </body>
-</html>
