--- a/public/about.html
+++ b/public/about.html
@@ -153,15 +153,15 @@
       <h4 class="text-gold font-semibold text-lg mb-4">Contact</h4>
       <ul class="text-sm text-gray-300 space-y-2">
         <li>🕘 Mon – Fri: 8.00am – 6.00pm</li>
-        <li><a href="tel:+2349168033670" class="hover:text-gold">📞 09168033670</a></li>
+        <li><a href="tel:+2348033368919" class="hover:text-gold">📞 08033368919</a></li>
         <li>📧 <a href="mailto:info@globallightmasters.com" class="text-gold hover:underline">globallightmastersresources@gmail.com</a></li>
       </ul>
     </div>
     <div>
       <h4 class="text-gold font-semibold text-lg mb-4">Address</h4>
       <p class="text-sm text-gray-300">
-        48 Idoluwo Street (First Floor)<br>
-        port.
+        15 Okija Street<br>
+        Port Harcourt.
       </p>
     </div>
   </div>
