--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
       <div>
         <h4 class="text-gold font-semibold text-lg mb-4">Address</h4>
         <p class="text-sm text-gray-300">
-          15 Okija Street<br>
+          15 Okija Street, Opposite Health Center<br>
           Port Harcourt
         </p>
       </div>
