--- a/public/gallery.html
+++ b/public/gallery.html
@@ -61,16 +61,16 @@
   </nav>
 
   <!-- Hero -->
-  <section class="relative h-screen flex items-center justify-center pt-24 pb-24 animate-fade-up">
+  <section class="relative flex items-center justify-center pt-24 pb-4 animate-fade-up">
     <img src="images/contact-hero.jpg" alt="Gallery Background" class="absolute inset-0 w-full h-full object-cover opacity-10 z-0" />
     <h2 class="text-5xl md:text-6xl font-bold gradient-gold drop-shadow-lg z-10 text-center">Gallery</h2>
   </section>
 
   <!-- Gallery Grid -->
-  <section class="py-16 px-6 md:px-16 bg-gray-900 text-gray-200">
+  <section class="py-8 px-1 md:px-2 bg-gray-900 text-gray-200">
     <div class="max-w-6xl mx-auto">
-      <div class="grid md:grid-cols-3 gap-8">
-        <!-- 20 Images -->
+      <div class="grid md:grid-cols-3 gap-6">
+        <!-- 62 Images (62 and 65 removed) -->
         <div class="bg-gray-800 rounded-lg overflow-hidden luxury-shadow hover-glow"><img src="images/picture1.jpg" alt="Gallery 1" class="w-full h-60 object-cover" /></div>
         <div class="bg-gray-800 rounded-lg overflow-hidden luxury-shadow hover-glow"><img src="images/picture2.jpg" alt="Gallery 2" class="w-full h-60 object-cover" /></div>
         <div class="bg-gray-800 rounded-lg overflow-hidden luxury-shadow hover-glow"><img src="images/picture3.jpg" alt="Gallery 3" class="w-full h-60 object-cover" /></div>
@@ -91,6 +91,50 @@
         <div class="bg-gray-800 rounded-lg overflow-hidden luxury-shadow hover-glow"><img src="images/picture18.jpg" alt="Gallery 18" class="w-full h-60 object-cover" /></div>
         <div class="bg-gray-800 rounded-lg overflow-hidden luxury-shadow hover-glow"><img src="images/picture19.jpg" alt="Gallery 19" class="w-full h-60 object-cover" /></div>
         <div class="bg-gray-800 rounded-lg overflow-hidden luxury-shadow hover-glow"><img src="images/picture20.jpg" alt="Gallery 20" class="w-full h-60 object-cover" /></div>
+        <div class="bg-gray-800 rounded-lg overflow-hidden luxury-shadow hover-glow"><img src="images/picture21.jpg" alt="Gallery 21" class="w-full h-60 object-cover" /></div>
+        <div class="bg-gray-800 rounded-lg overflow-hidden luxury-shadow hover-glow"><img src="images/picture22.jpg" alt="Gallery 22" class="w-full h-60 object-cover" /></div>
+        <div class="bg-gray-800 rounded-lg overflow-hidden luxury-shadow hover-glow"><img src="images/picture23.jpg" alt="Gallery 23" class="w-full h-60 object-cover" /></div>
+        <div class="bg-gray-800 rounded-lg overflow-hidden luxury-shadow hover-glow"><img src="images/picture24.jpg" alt="Gallery 24" class="w-full h-60 object-cover" /></div>
+        <div class="bg-gray-800 rounded-lg overflow-hidden luxury-shadow hover-glow"><img src="images/picture25.jpg" alt="Gallery 25" class="w-full h-60 object-cover" /></div>
+        <div class="bg-gray-800 rounded-lg overflow-hidden luxury-shadow hover-glow"><img src="images/picture26.jpg" alt="Gallery 26" class="w-full h-60 object-cover" /></div>
+        <div class="bg-gray-800 rounded-lg overflow-hidden luxury-shadow hover-glow"><img src="images/picture27.jpg" alt="Gallery 27" class="w-full h-60 object-cover" /></div>
+        <div class="bg-gray-800 rounded-lg overflow-hidden luxury-shadow hover-glow"><img src="images/picture28.jpg" alt="Gallery 28" class="w-full h-60 object-cover" /></div>
+        <div class="bg-gray-800 rounded-lg overflow-hidden luxury-shadow hover-glow"><img src="images/picture29.jpg" alt="Gallery 29" class="w-full h-60 object-cover" /></div>
+        <div class="bg-gray-800 rounded-lg overflow-hidden luxury-shadow hover-glow"><img src="images/picture30.jpg" alt="Gallery 30" class="w-full h-60 object-cover" /></div>
+        <div class="bg-gray-800 rounded-lg overflow-hidden luxury-shadow hover-glow"><img src="images/picture31.jpg" alt="Gallery 31" class="w-full h-60 object-cover" /></div>
+        <div class="bg-gray-800 rounded-lg overflow-hidden luxury-shadow hover-glow"><img src="images/picture32.jpg" alt="Gallery 32" class="w-full h-60 object-cover" /></div>
+        <div class="bg-gray-800 rounded-lg overflow-hidden luxury-shadow hover-glow"><img src="images/picture33.jpg" alt="Gallery 33" class="w-full h-60 object-cover" /></div>
+        <div class="bg-gray-800 rounded-lg overflow-hidden luxury-shadow hover-glow"><img src="images/picture34.jpg" alt="Gallery 34" class="w-full h-60 object-cover" /></div>
+        <div class="bg-gray-800 rounded-lg overflow-hidden luxury-shadow hover-glow"><img src="images/picture35.jpg" alt="Gallery 35" class="w-full h-60 object-cover" /></div>
+        <div class="bg-gray-800 rounded-lg overflow-hidden luxury-shadow hover-glow"><img src="images/picture36.jpg" alt="Gallery 36" class="w-full h-60 object-cover" /></div>
+        <div class="bg-gray-800 rounded-lg overflow-hidden luxury-shadow hover-glow"><img src="images/picture37.jpg" alt="Gallery 37" class="w-full h-60 object-cover" /></div>
+        <div class="bg-gray-800 rounded-lg overflow-hidden luxury-shadow hover-glow"><img src="images/picture38.jpg" alt="Gallery 38" class="w-full h-60 object-cover" /></div>
+        <div class="bg-gray-800 rounded-lg overflow-hidden luxury-shadow hover-glow"><img src="images/picture39.jpg" alt="Gallery 39" class="w-full h-60 object-cover" /></div>
+        <div class="bg-gray-800 rounded-lg overflow-hidden luxury-shadow hover-glow"><img src="images/picture40.jpg" alt="Gallery 40" class="w-full h-60 object-cover" /></div>
+        <div class="bg-gray-800 rounded-lg overflow-hidden luxury-shadow hover-glow"><img src="images/picture41.jpg" alt="Gallery 41" class="w-full h-60 object-cover" /></div>
+        <div class="bg-gray-800 rounded-lg overflow-hidden luxury-shadow hover-glow"><img src="images/picture42.jpg" alt="Gallery 42" class="w-full h-60 object-cover" /></div>
+        <div class="bg-gray-800 rounded-lg overflow-hidden luxury-shadow hover-glow"><img src="images/picture43.jpg" alt="Gallery 43" class="w-full h-60 object-cover" /></div>
+        <div class="bg-gray-800 rounded-lg overflow-hidden luxury-shadow hover-glow"><img src="images/picture44.jpg" alt="Gallery 44" class="w-full h-60 object-cover" /></div>
+        <div class="bg-gray-800 rounded-lg overflow-hidden luxury-shadow hover-glow"><img src="images/picture45.jpg" alt="Gallery 45" class="w-full h-60 object-cover" /></div>
+        <div class="bg-gray-800 rounded-lg overflow-hidden luxury-shadow hover-glow"><img src="images/picture46.jpg" alt="Gallery 46" class="w-full h-60 object-cover" /></div>
+        <div class="bg-gray-800 rounded-lg overflow-hidden luxury-shadow hover-glow"><img src="images/picture47.jpg" alt="Gallery 47" class="w-full h-60 object-cover" /></div>
+        <div class="bg-gray-800 rounded-lg overflow-hidden luxury-shadow hover-glow"><img src="images/picture48.jpg" alt="Gallery 48" class="w-full h-60 object-cover" /></div>
+        <div class="bg-gray-800 rounded-lg overflow-hidden luxury-shadow hover-glow"><img src="images/picture49.jpg" alt="Gallery 49" class="w-full h-60 object-cover" /></div>
+        <div class="bg-gray-800 rounded-lg overflow-hidden luxury-shadow hover-glow"><img src="images/picture50.jpg" alt="Gallery 50" class="w-full h-60 object-cover" /></div>
+        <div class="bg-gray-800 rounded-lg overflow-hidden luxury-shadow hover-glow"><img src="images/picture51.jpg" alt="Gallery 51" class="w-full h-60 object-cover" /></div>
+        <div class="bg-gray-800 rounded-lg overflow-hidden luxury-shadow hover-glow"><img src="images/picture52.jpg" alt="Gallery 52" class="w-full h-60 object-cover" /></div>
+        <div class="bg-gray-800 rounded-lg overflow-hidden luxury-shadow hover-glow"><img src="images/picture53.jpg" alt="Gallery 53" class="w-full h-60 object-cover" /></div>
+        <div class="bg-gray-800 rounded-lg overflow-hidden luxury-shadow hover-glow"><img src="images/picture54.jpg" alt="Gallery 54" class="w-full h-60 object-cover" /></div>
+        <div class="bg-gray-800 rounded-lg overflow-hidden luxury-shadow hover-glow"><img src="images/picture55.jpg" alt="Gallery 55" class="w-full h-60 object-cover" /></div>
+        <div class="bg-gray-800 rounded-lg overflow-hidden luxury-shadow hover-glow"><img src="images/picture56.jpg" alt="Gallery 56" class="w-full h-60 object-cover" /></div>
+        <div class="bg-gray-800 rounded-lg overflow-hidden luxury-shadow hover-glow"><img src="images/picture57.jpg" alt="Gallery 57" class="w-full h-60 object-cover" /></div>
+        <div class="bg-gray-800 rounded-lg overflow-hidden luxury-shadow hover-glow"><img src="images/picture58.jpg" alt="Gallery 58" class="w-full h-60 object-cover" /></div>
+        <div class="bg-gray-800 rounded-lg overflow-hidden luxury-shadow hover-glow"><img src="images/picture59.jpg" alt="Gallery 59" class="w-full h-60 object-cover" /></div>
+        <div class="bg-gray-800 rounded-lg overflow-hidden luxury-shadow hover-glow"><img src="images/picture60.jpg" alt="Gallery 60" class="w-full h-60 object-cover" /></div>
+        <div class="bg-gray-800 rounded-lg overflow-hidden luxury-shadow hover-glow"><img src="images/picture61.jpg" alt="Gallery 61" class="w-full h-60 object-cover" /></div>
+        <div class="bg-gray-800 rounded-lg overflow-hidden luxury-shadow hover-glow"><img src="images/picture63.jpg" alt="Gallery 63" class="w-full h-60 object-cover" /></div>
+        <div class="bg-gray-800 rounded-lg overflow-hidden luxury-shadow hover-glow"><img src="images/picture64.jpg" alt="Gallery 64" class="w-full h-60 object-cover" /></div>
+        <div class="bg-gray-800 rounded-lg overflow-hidden luxury-shadow hover-glow"><img src="images/picture66.jpg" alt="Gallery 66" class="w-full h-60 object-cover" /></div>
       </div>
     </div>
   </section>
@@ -126,7 +170,7 @@
       <div>
         <h4 class="text-gold font-semibold text-lg mb-4">Address</h4>
         <p class="text-sm text-gray-300">
-          15 Okija Street<br>
+          15 Okija Street, Opposite Health Center<br>
           Port Harcourt        </p>
       </div>
     </div>
@@ -145,9 +189,4 @@
   <script>
     document.getElementById('navToggle')?.addEventListener('click', function () {
       const menu = document.getElementById('mobileMenu');
-      menu?.classList.toggle('hidden');
-    });
-  </script>
-
-</body>
-</html>
+      menu
