--- a/public/about.html
+++ b/public/about.html
@@ -74,7 +74,7 @@
 </nav>
 
 <!-- About Header -->
-<section class="relative h-screen flex items-center justify-center pt-24 pb-24 animate-fade-up">
+<section class="relative h-64 flex items-center justify-center pt-24 pb-12 animate-fade-up">
   <img src="images/about-bg.jpg" alt="About Background" class="absolute inset-0 w-full h-full object-cover opacity-10 z-0" />
   <h2 class="text-5xl md:text-6xl font-bold gradient-gold drop-shadow-lg z-10 text-center">About Us</h2>
 </section>
@@ -160,7 +160,7 @@
     <div>
       <h4 class="text-gold font-semibold text-lg mb-4">Address</h4>
       <p class="text-sm text-gray-300">
-        15 Okija Street<br>
+        15 Okija Street, Opposite Health Center<br>
         Port Harcourt.
       </p>
     </div>
@@ -189,3 +189,4 @@
 </script>
 
 </body>
+</html>
