--- a/public/contact.html
+++ b/public/contact.html
@@ -79,7 +79,7 @@
 </nav>
 
 <!-- Hero Section -->
-<section class="relative h-screen flex items-center justify-center pt-24 pb-24 animate-fade-up">
+<section class="relative h-64 flex items-center justify-center pt-24 pb-12 animate-fade-up">
   <img src="images/contact-hero.jpg" alt="Contact Background" class="absolute inset-0 w-full h-full object-cover opacity-10 z-0" />
   <h2 class="text-5xl md:text-6xl font-bold gradient-gold drop-shadow-lg z-10 text-center">Contact Us</h2>
 </section>
